# opuslang2

./: blas.ol2  pyproject.toml
opuslang2/: __init__.py  compile.py  opuslang2.lark  parser.py
tests/: parser_test.py
