[tool.poetry]
name = "opuslang2"
version = "0.1.0"
description = "Language for describing bridge bidding systems"
authors = ["Brychlikov <brychlikow@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lark-parser = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
